# a_share_multi_factor_project

./: .gitignore  ARTIFACT_POLICY.md  A股多因子选股项目大纲.md  README.md  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt  task_711.md
config/: config.yaml
note/: test.ipynb
notebook/: inspect_stock_data.ipynb  stockdatacheck.ipynb  test.ipynb
reports/: akshare_financial_data_audit.md  akshare_financial_data_diagnostics.csv  akshare_fundamental_smoke_test.md  market_cap_data_audit.md  market_cap_data_diagnostics.csv  market_cap_factor_smoke_test.md  project_overview_report.md
scripts/: __init__.py  audit_formal_eot_delivery.py  baostock_hs300_downloader_fixed.py  build_coverage_expansion_panel.py  build_fundamental_panel_from_akshare.py  build_market_cap_panel.py  check_project_hygiene.py  clean_generated_cache.py  download _stocks_baostocks.py  download_fundamentals_akshare.py  download_stock_akshare.py  download_stocks_efinance.py  factors.py  fetch_akshare_financial_statements.py  fetch_broad_fundamentals.py  rebuild_akshare_fundamentals_with_market_cap.py  run_coverage_expansion_audit.py  run_demo.py  run_eot_factor_drift_feasibility.py  run_eot_factor_lifecycle.py  run_eot_map_lifecycle_test.py  run_eot_map_robustness.py  run_final_factor_research_report.py  run_full_research_pipeline.py  run_outline_completion_audit.py  run_pit_coverage_audit.py  run_quality_growth_risk_factor_research.py  run_smoke_factor_report.py  run_value_neutralized_factor_research.py  run_weekly_eot_drift_robustness.py  run_weekly_eot_factor_drift.py  (+2 more)
src/: __init__.py  (+1 more)
(+191 files in other folders)
