[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "a-share-multifactor-research"
version = "0.1.0"
description = "Reproducible A-share multifactor research and EOT-map lifecycle diagnostics."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{name = "A-Share Multifactor Research"}]
dependencies = [
  "numpy==2.4.6",
  "pandas==3.0.3",
]

[project.optional-dependencies]
research = [
  "scipy==1.17.1",
  "scikit-learn==1.8.0",
  "POT==0.9.7",
  "matplotlib==3.10.9",
  "seaborn==0.13.2",
  "fastparquet==2026.3.0",
]
data = [
  "akshare==1.18.60",
  "baostock==0.9.1",
  "efinance==0.5.8",
]
dev = ["pytest==9.0.3"]
all = [
  "scipy==1.17.1",
  "scikit-learn==1.8.0",
  "POT==0.9.7",
  "matplotlib==3.10.9",
  "seaborn==0.13.2",
  "fastparquet==2026.3.0",
  "akshare==1.18.60",
  "baostock==0.9.1",
  "efinance==0.5.8",
  "pytest==9.0.3",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
